<resources>
	<string name="app_name">Vitality</string>
	<string name="accCheck">Do you have an account?</string>
	<string name="accSignUp">Sign Up</string>
	<string name="accLogIn">Log In</string>
	<string name="accRegister">Register</string>
	<string name="accEmail">Email</string>
	<string name="accName">Name</string>
	<string name="accPhone">Phone</string>
	<string name="accPassword">Password</string>
	<string name="welcome">"Welcome !"</string>
	<string name="accLoginPrompt">Log in to your account</string>
	<string name="accCreateAccountPrompt"><u>New user? Create an account here</u></string>
	<string name="accCreate">Create New Account</string>
	<string name="accBackLogin"><u>Already Registered? Login Here</u></string>
	<string name="accWelcome">Welcome</string>
	<string name="userProfile">User Profile</string>
	<string name="assessment">Assessment</string>
	<string name="bmi">BMI</string>
	<string name="dietInfo">Dietary Information</string>
	<string name="dietGuidelines">Dietary Guidelines</string>
	<string name="physicalActivity">Physical Activity</string>
	<string name="sign_out"><u>Sign Out</u></string>
	<string name="accGuest"><u>Continue as Guest</u></string>
	<string name="vid1"><![CDATA[How To Stay Fit & Active? Podcast #5 | Diet & Nutrition Tips | Hindi]]></string>
	<string name="vid2"><![CDATA[Dr. Layne Norton: The Science of Eating for Health, Fat Loss & Lean Muscle\n]]></string>
	<string name="vid3">Easy Diet Tips to Control Diabetes | Dr. V Mohan</string>
	<string name="bmi_tracker">BMI Tracker</string>
	<string name="height">Height</string>
	<string name="weight">Weight</string>
	<string name="bmiCalculate">Calculate BMI</string>
	<string name="bmiCm">cm</string>
	<string name="bmiKg">kg</string>
	<string name="bmiCalculatePrompt">Calculate BMI</string>
	<string name="bmiUserHeight">Your height is</string>
	<string name="bmiUserWeight">Your weight is</string>
	<string name="save">Save</string>
	<string name="age">Age</string>
	<string name="step_counter">Step Counter</string>
	
	<string name="channel_name">Notifications</string>
	<string name="channel_description">Default</string>
	<string name="homeContact">Contact a nutrition expert</string>
	<string name="assessment_tracker">Assessment Tracker</string>
	<string name="_3_month_assessment">3-Month Assessment</string>
	<string name="weight_kg">Weight (kg)</string>
	<string name="dietary_information">Dietary Information</string>
</resources>