<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="10dp"
	android:background="#10000000"
	tools:context=".BmiActivity">
	
	<TextView
		android:id="@+id/bmiTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/bmi_tracker"
		android:textSize="40sp"
		android:textColor="@color/green"
		android:gravity="center"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>
	<TextView
		android:id="@+id/bmiUserHeight"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/bmiUserHeight"
		android:textSize="18sp"
		android:layout_marginTop="40dp"
		app:layout_constraintTop_toBottomOf="@id/bmiTitle"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>
	<TextView
		android:id="@+id/bmiUserWeight"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/bmiUserWeight"
		android:textSize="18sp"
		app:layout_constraintTop_toBottomOf="@id/bmiUserHeight"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>
	<TextView
		android:id="@+id/bmiUserBmi"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="BMI = "
		android:textSize="18sp"
		app:layout_constraintTop_toBottomOf="@id/bmiUserWeight"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>
	
	<TextView
		android:id="@+id/bmiTvCalculateBmi"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="60dp"
		android:text="@string/bmiCalculatePrompt"
		android:textSize="26sp"
		app:layout_constraintTop_toBottomOf="@id/bmiUserBmi"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>
	
	<EditText
		android:id="@+id/bmiEtHeight"
		android:layout_width="200dp"
		android:layout_height="48dp"
		android:ems="5"
		android:hint="@string/height"
		android:background="#fff"
		android:inputType="number"
		android:padding="10dp"
		android:layout_marginTop="20dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/bmiTvCalculateBmi"
		/>
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="48dp"
		android:textSize="18sp"
		android:text="@string/bmiCm"
		android:gravity="center"
		app:layout_constraintStart_toEndOf="@id/bmiEtHeight"
		app:layout_constraintTop_toTopOf="@id/bmiEtHeight"
		/>
	
	<EditText
		android:id="@+id/bmiEtWeight"
		android:layout_width="200dp"
		android:layout_height="48dp"
		android:ems="5"
		android:hint="@string/weight"
		android:inputType="number"
		android:background="#fff"
		android:padding="10dp"
		android:layout_marginTop="10dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/bmiEtHeight"/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="48dp"
		android:textSize="18sp"
		android:text="@string/bmiKg"
		android:gravity="center"
		app:layout_constraintStart_toEndOf="@id/bmiEtWeight"
		app:layout_constraintTop_toTopOf="@id/bmiEtWeight"
		/>
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/bmiBtnCalculate"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:text="@string/bmiCalculate"
		android:layout_marginTop="50dp"
		android:background="@drawable/button_green"
		android:textColor="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/bmiEtWeight"
		/>
	
	<TextView
		android:id="@+id/bmiResult"
		android:layout_width="wrap_content"
		android:layout_height="48dp"
		android:textSize="18sp"
		android:text=""
		android:gravity="center"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/bmiBtnCalculate"
		/>
</androidx.constraintlayout.widget.ConstraintLayout>