<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="10dp"
	>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		
		<TextView
			android:id="@+id/homeTitle"
			android:layout_width="match_parent"
			android:layout_height="80dp"
			android:gravity="center"
			android:text="@string/dietary_information"
			android:textSize="40sp"
			android:textStyle="bold" />
		<WebView
			android:layout_width="match_parent"
			android:layout_height="250dp"
			android:id="@+id/wvVideo1"
			/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/vid1"
			android:layout_marginBottom="15dp"
			android:gravity="center"
			/>
		
		<WebView
			android:layout_width="match_parent"
			android:layout_height="250dp"
			android:id="@+id/wvVideo2"
			/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/vid2"
			android:layout_marginBottom="10dp"
			android:gravity="center"
			/>
		
		<WebView
			android:layout_width="match_parent"
			android:layout_height="250dp"
			android:id="@+id/wvVideo3"
			/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/vid3"
			android:gravity="center"
			/>
	</LinearLayout>
</ScrollView>