<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Register"
	android:padding="10dp"
	android:background="#10000000"
	>
	
	<TextView
		android:id="@+id/regTvCreate"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="32dp"
		android:text="@string/accCreate"
		android:textSize="28sp"
		android:textStyle="bold"
		android:textColor="#00aa55"
		android:layout_marginTop="30dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />
	
	<EditText
		android:id="@+id/regEtName"
		android:layout_width="379dp"
		android:layout_height="50dp"
		android:autofillHints="name"
		android:ems="10"
		android:hint="@string/accName"
		android:inputType="textPersonName"
		android:padding="10dp"
		android:layout_marginTop="40dp"
		android:background="#fff"
		android:drawableRight="@drawable/ic_account"
		app:layout_constraintTop_toBottomOf="@id/regTvCreate"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />
	
	<EditText
		android:id="@+id/regEtEmail"
		android:layout_width="379dp"
		android:layout_height="50dp"
		android:autofillHints="emailAddress"
		android:ems="10"
		android:hint="@string/accEmail"
		android:background="#fff"
		android:inputType="textEmailAddress"
		android:padding="10dp"
		android:layout_marginTop="10dp"
		android:drawableRight="@drawable/ic_email"
		app:layout_constraintTop_toBottomOf="@id/regEtName"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />
	
	<EditText
		android:id="@+id/regEtPhone"
		android:layout_width="379dp"
		android:layout_height="50dp"
		android:autofillHints="phone"
		android:ems="10"
		android:hint="@string/accPhone"
		android:inputType="phone"
		android:background="#fff"
		android:padding="10dp"
		android:layout_marginTop="10dp"
		android:drawableRight="@drawable/ic_phone"
		app:layout_constraintTop_toBottomOf="@id/regEtEmail"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		tools:ignore="MissingConstraints" />
	
	
	<EditText
		android:id="@+id/regEtPassword"
		android:layout_width="379dp"
		android:layout_height="50dp"
		android:layout_marginBottom="32dp"
		android:autofillHints="password"
		android:ems="10"
		android:hint="@string/accPassword"
		android:inputType="textPassword"
		android:background="#fff"
		android:padding="10dp"
		android:layout_marginTop="10dp"
		android:drawableRight="@drawable/password2"
		app:layout_constraintTop_toBottomOf="@id/regEtPhone"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/regBtnRegister"
		android:layout_width="211dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="40dp"
		android:layout_marginBottom="16dp"
		android:text="@string/accRegister"
		android:textColor="#FFFFFF"
		android:textSize="18sp"
		android:textStyle="bold"
		android:background="@drawable/button_green"
		app:layout_constraintTop_toBottomOf="@+id/regEtPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		tools:ignore="MissingConstraints" />
	
	<TextView
		android:id="@+id/regTvBackLogin"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="24dp"
		android:text="@string/accBackLogin"
		android:textSize="18sp"
		app:layout_constraintTop_toBottomOf="@id/regBtnRegister"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		tools:ignore="MissingConstraints" />
	
	
</androidx.constraintlayout.widget.ConstraintLayout>