<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="10dp"
	>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/assessmentTitle"
			android:layout_width="match_parent"
			android:layout_height="80dp"
			android:text="@string/assessment_tracker"
			android:textSize="32sp"
			android:textStyle="bold"
			android:gravity="center"
			android:background="@drawable/button_green"
			android:textColor="@color/white"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="20dp"
			/>
		
		<TextView
			android:id="@+id/threeMonthTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/_3_month_assessment"
			android:textSize="18sp"
			android:textStyle="bold"
			android:layout_marginTop="16dp" />
		
		<EditText
			android:id="@+id/threeMonthWeight"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:hint="@string/weight_kg"
			android:inputType="numberDecimal"
			android:layout_marginTop="8dp" />
		
		<EditText
			android:id="@+id/threeMonthBMI"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:hint="BMI"
			android:inputType="numberDecimal"
			android:layout_marginTop="8dp" />
		
		<TextView
			android:id="@+id/sixMonthTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="6-Month Assessment"
			android:textSize="18sp"
			android:textStyle="bold"
			android:layout_marginTop="16dp" />
		
		<EditText
			android:id="@+id/sixMonthWeight"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:hint="Weight (kg)"
			android:inputType="numberDecimal"
			android:layout_marginTop="8dp" />
		
		<EditText
			android:id="@+id/sixMonthBMI"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:hint="BMI"
			android:inputType="numberDecimal"
			android:layout_marginTop="8dp" />

		<TextView
			android:id="@+id/twelveMonthTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="12-Month Assessment"
			android:textSize="18sp"
			android:textStyle="bold"
			android:layout_marginTop="16dp" />
		
		<EditText
			android:id="@+id/twelveMonthWeight"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:hint="Weight (kg)"
			android:inputType="numberDecimal"
			android:layout_marginTop="8dp" />
		
		<EditText
			android:id="@+id/twelveMonthBMI"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:hint="BMI"
			android:inputType="numberDecimal"
			android:layout_marginTop="8dp" />
		
		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/assBtnSave"
			android:layout_width="250dp"
			android:layout_height="50dp"
			android:text="Save Assessment Data"
			android:textSize="18sp"
			android:background="@drawable/button_green"
			android:textColor="@color/white"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="40dp" />
	
	</LinearLayout>
</ScrollView>
